Fixing bar chart on small devices

--- a/src/styles/sass/_common.scss
+++ b/src/styles/sass/_common.scss
@@ -18,11 +18,7 @@
 .recharts-sector:focus {
   outline: none;
 }
-.page-row-1 {
-  margin-bottom: 15px;
-  flex-wrap: wrap;
-}
-.page-row-2 {
+.page-row-1, .page-row-2 {
   flex-wrap: wrap;
 }
 .responsive-container {
