--- a/src/styles/sass/_variables.scss
+++ b/src/styles/sass/_variables.scss
@@ -32,20 +32,4 @@ $bg-search-hover: rgba(242, 242, 242, 0.9);
 $btn-carte: rgba(47, 128, 237, 1);
 $color-search: #11161a;
 
-$grid-breakpoints: (
-  xs: 0,
-  sm: 576px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px,
-  xxl: 1920px
-);
-$container-max-widths: (
-  sm: 540px,
-  md: 720px,
-  lg: 960px,
-  xl: 1920px,
-  xxl: 4100px
-);
-
 $bac--blueHovering: rgba(63, 81, 181, 1);
